--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
   text-align: center;
 }
 
+.fixedBG {
+  z-index: -1;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(315deg, #000000 0%, #7f8c8d 100%);
+  top: 0;
+  left: 0;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +45,22 @@
   to {
     transform: rotate(360deg);
   }
+}
+body {
+  margin: 0;
+  padding: 0;
+}
+
+
+.notification-container {
+  width: 400px !important;
+}
+
+.notification {
+  box-shadow: unset !important;
+  backdrop-filter: blur(15px) !important;
+}
+
+.notification:nth-child(1) {
+  margin-top: 25% !important;
 }
