--- a/src/pages/Product/Product.css
+++ b/src/pages/Product/Product.css
@@ -63,7 +63,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 3% 3% 0 3%;
+    padding: 3% ;
     height: 100%;
 }
 .mySwiper {
