--- a/src/pages/User/User.css
+++ b/src/pages/User/User.css
@@ -120,13 +120,12 @@
 
 .UserContent {
   height: 95%;
-  padding: 0 2%;
+  padding: 0 5%;
 }
 
 .UserContent .UserGreeting {
-  width: 90%;
+  width: 100%;
   height: 25%;
-  margin: 0 5%;
   background: rgba(255, 255, 255, 0.3);
   border-radius: 15px;
   box-shadow: 0 15px 25px rgb(0 0 0 / 50%);
@@ -145,7 +144,7 @@
 }
 
 .editContainer .editBox {
-  width: 1000px;
+  width: 80vw;
   height: 80vh;
 }
 
@@ -162,7 +161,7 @@
 .editContainer .editBox .editBackgroundContainer {
   margin: 2% 5%;
   width: 90%;
-  height: 200px;
+  height: 300px;
   overflow: auto;
 }
 
@@ -177,12 +176,12 @@
 }
 
 .editContainer .editBox .editBackgroundContainer .editBackgroundBox {
-    height: 90%;
+    height: 65%;
     width: -moz-fit-content;
     width: fit-content;
     display: flex;
     position: relative;
-    margin-top: 2%;
+    margin-top: 5%;
     margin-left: 5%;
     margin-right: 5%;
 }
@@ -212,3 +211,30 @@
   margin-right: 0;
 }
 
+
+.editAvatarContainer {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.editAvatarContainer .editAvatarBox {
+  position: relative;
+}
+
+.editAvatarContainer .editAvatarTitle {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  font-size: 1.5rem;
+  color: #000;
+}
+
+.editAvatarContainer .editAvatarBox .uploadImg {
+  position: absolute;
+  left: 0;
+  width: 97px !important; 
+}
