--- a/src/pages/Shop/Shop.css
+++ b/src/pages/Shop/Shop.css
@@ -217,7 +217,7 @@
 
 .poplarGameContainer .popularGames {
     position: relative;
-    height: 300px;
+    height: 400px;
     display: flex;
 }
 
@@ -509,7 +509,7 @@
     background-size: cover !important;
     height: 100%;
     width: 30%;
-
+    background-position: center !important;
 }
 
 .topGameDownloadedInfo {
@@ -545,4 +545,44 @@
 }
 .paginationRight {
     margin-left: 5% !important;
+}
+
+@media only screen and (max-width:993px) {
+    .poplarGameContainer .popularGames {
+        height: 300px;
+    }
+    .gameImgBox {
+        height: 70%;
+    }
+    .gameInfo {
+        height: 30%;    
+        position: relative;
+    }
+
+    .gameInfo .gameName {
+        font-size: 13px;
+    }
+    .gameName, .gamePrice {
+        height: 50%;
+    } 
+    .topGameDownloadedContent {
+        height: 450px;
+    }
+    
+    .topGameDownloadedInfo div, .topGameDownloadedInfo span {
+        font-size: 16px !important;
+    }
+    .gameSlide {
+        height: 350px;
+        padding: 5%;
+    }
+    .recommendGame {
+        width:550px;
+        height: 250px;
+        padding: 10px;
+    }
+    .shoppingCartContainer {
+        height: 450px;
+        width: 45%;
+    }
 }
